listing page feedback

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,6 +30,7 @@ $product-price: #b76e79;
 // Main colors
 $primary-color: #ffcc00;
 $secondary-color: #0c1c31;
+$text-subtle: #606060;
 $border-color: #f2f4f3;
 $brown-text-color: #b76e79;
 $yellow-text-color: #fefce0;
