--- a/resources/sass/custom-selectbox.scss
+++ b/resources/sass/custom-selectbox.scss
@@ -6,8 +6,8 @@ $select-background: $white;
 .select-hidden {
     display: none;
     padding-right: 10px;
-  }
-  .select {
+}
+.select {
     cursor: pointer;
     display: inline-block;
     position: relative;
@@ -15,8 +15,8 @@ $select-background: $white;
     color: $select-color;
     width: $select-width;
     height: $select-height;
-  }
-  .select-styled {
+}
+.select-styled {
     top: 0;
     right: 0;
     bottom: 0;
@@ -25,29 +25,30 @@ $select-background: $white;
     padding: 8px 15px;
     @include transition(all 0.2s ease-in);
     &:after {
-      content:"";
-      width: 0;
-      height: 0;
-      border: 7px solid transparent;
-      border-color: $select-color transparent transparent transparent;
-      position: absolute;
-      top: 16px;
-      right: 10px;
+        content: '';
+        width: 0;
+        height: 0;
+        border: 7px solid transparent;
+        border-color: $select-color transparent transparent transparent;
+        position: absolute;
+        top: 16px;
+        right: 10px;
     }
     &:hover {
-      background-color: darken($select-background, 2);
+        background-color: darken($select-background, 2);
     }
-    &:active, &.active {
-      background-color: darken($select-background, 5);
-      &:after {
-        top: 9px;
-        border-color: transparent transparent $select-color transparent;
-      }
+    &:active,
+    &.active {
+        background-color: darken($select-background, 5);
+        &:after {
+            top: 9px;
+            border-color: transparent transparent $select-color transparent;
+        }
     }
-  }
-  
-  .select-options {
-    display: none; 
+}
+
+.select-options {
+    display: none;
     position: absolute;
     // top: 100%;
     right: 0;
@@ -56,19 +57,18 @@ $select-background: $white;
     margin: 0;
     padding: 0;
     list-style: none;
-    background-color: darken($select-background, 5);
+    background: $white;
     li {
-      margin: 0;
-      padding: 12px 0;
-      text-indent: 15px;
-      border-top: 1px solid darken($select-background, 10);
-      @include transition(all 0.15s ease-in);
-      &:hover {
-        color: $select-background;
-        background: $select-color;
-      }
-      &[rel="hide"] {
-        display: none;
-      }
+        margin: 0;
+        padding: 12px 0;
+        text-indent: 15px;
+        border-top: 1px solid darken($select-background, 10);
+        @include transition(all 0.15s ease-in);
+        &:hover {
+            background: darken($background-color, 2);
+        }
+        &[rel='hide'] {
+            display: none;
+        }
     }
-  }
+}
