search bar and footer fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -150,6 +150,10 @@ body {
         text-align: center;
         font-size: 14px;
         margin-bottom: 10px;
+        @include media-breakpoint-up(md) {
+            text-align: left;
+            font-size: 18px;
+        }
     }
 
     .socials {
