--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -12,7 +12,7 @@
 
         .footer {
             position: absolute;
-            bottom: 5px;
+            bottom: 0;
         }
     }
 }
@@ -125,7 +125,7 @@
     .brand-association {
         background-color: rgba(255, 255, 255, 0.7);
         position: absolute;
-        bottom: 40px;
+        bottom: 55px;
         width: 100%;
         padding: 10px 30px;
 
