--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -26,6 +26,7 @@
         .footer-text {
             display: inline-block;
             margin-right: 10px;
+            padding-right: 75px;
         }
     }
 }
