--- a/resources/sass/navbar.scss
+++ b/resources/sass/navbar.scss
@@ -22,7 +22,8 @@
     .navbar-nav {
         .nav-item {
             .-icon {
-                font-size: 30px;
+                font-size: 25px;
+                vertical-align: text-bottom;
             }
         }
 
