--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -134,6 +134,9 @@ body {
     .more-soon {
         max-width: 189px;
     }
+    .brand-row {
+        display: flex;
+    }
 }
 
 .brand-association {
