--- a/resources/sass/_brands.scss
+++ b/resources/sass/_brands.scss
@@ -12,6 +12,7 @@
         .brands-details {
             margin: 25px;
             text-align: justify;
+            font-size: 18px;
             h3 {
                 line-height: 2;
             }
@@ -25,33 +26,39 @@
         }
     }
     .brands-prod-container {
-        .row {
-            .brands-prod-div {
-                margin: 10px 0;
-                .brands-product {
-                    .brands-product-img {
-                        width: 265px;
-                        // margin: 5px 0;
-                    }
-                }
-                .product-detail {
-                    padding: 0 10px;
-                    text-align: center;
+        margin-top: 35px;
+        padding: 0;
+
+        .ls-product-div {
+            .prod-sale-price {
+                margin: -23px 0px 0 0px;
+                padding: 0 5px;
+                z-index: 58;
+                position: absolute;
+                left: 0;
+                background: $off-white;
+                color: $product-price;
+            }
+            .prod-discount-tag {
+                z-index: 58;
+                position: absolute;
+                right: 1px;
+                bottom: 1px;
+                background: #e8c101;
+                padding: 0 4px;
+                color: #fff;
+
+                &._20 {
+                    background: #e84c01;
                 }
             }
+            margin-bottom: 0px;
+            padding: 1px;
 
-            .prod-info {
-                bottom: 0px;
-                padding: 5px;
-                width: 100%;
-                background-color: rgba(0, 0, 0, 0.4);
-                height: 25px;
-                text-align: left;
-                font-size: 14px;
-                line-height: 14px;
-                z-index: 100;
-                color: $white;
-                width: 265px;
+            .ls-product {
+                margin-bottom: 0px;
+                min-height: 100px;
+                background-position: center;
             }
         }
     }
