--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,6 +34,7 @@
 @import 'homepage';
 @import 'subnav';
 @import 'footer';
+@import 'filters';
 @import 'listing';
 @import 'detailOverview';
 @import 'brands';
