--- a/resources/sass/filters.scss
+++ b/resources/sass/filters.scss
@@ -37,6 +37,13 @@
             }
         }
     }
+    .total-items {
+        text-align: right;
+        right: 10px;
+        position: relative;
+        top: 8px;
+        color: $text-subtle;
+    }
 
     @media only screen and (min-width: 768px) {
         position: sticky;
