--- a/resources/sass/filters.scss
+++ b/resources/sass/filters.scss
@@ -174,6 +174,7 @@
         z-index: 100;
         display: none;
         top: 0;
+        padding: 0 15px;
 
         &.show {
             display: block;
@@ -230,12 +231,14 @@
                 white-space: normal;
                 text-align: left;
                 margin-right: 0;
-                max-height: 250px;
+                max-height: 235px;
                 overflow: auto;
 
-                .dropdown-item {
+                .filter-item {
                     color: $white;
                     margin-right: 10px;
+                    padding: 1px 0;
+
                     .filter-label {
                         font-size: 16px;
                         .checkmark {
