--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -257,13 +257,18 @@ input:disabled + .checkmark + .text {
 
                     .ls-product-div {
                         .prod-sale-price {
-                            margin: -23px 0px 0 0px;
                             padding: 0 5px;
                             z-index: 58;
                             position: absolute;
                             left: 0;
+                            bottom: 0;
                             background: $off-white;
                             color: $product-price;
+                            .new-tag {
+                                display: inline-block;
+                                margin-right: 5px;
+                                color: $secondary-color;
+                            }
                         }
                         .prod-discount-tag {
                             z-index: 58;
@@ -338,7 +343,7 @@ input:disabled + .checkmark + .text {
     left: 0;
     background-color: $secondary-color;
     overflow-x: hidden;
-    transition: 0.5s;
+    transition: all 0.3s 0s ease-out;
     padding-top: 60px;
 }
 
