--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     padding: 10px 15px;
     position: relative;
-    bottom: 10px;
+    bottom: 0;
     width: 100%;
     background-color: $secondary-color;
     color: $white;
@@ -22,7 +22,6 @@
 @include media-breakpoint-up(sm) {
     .footer {
         display: inline-block;
-        margin-right: 10px;
         .footer-text {
             display: inline-block;
             margin-right: 10px;
