loader issue fixed

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -290,7 +290,7 @@ input:disabled + .checkmark + .text {
                         .ls-product {
                             margin-bottom: 0px;
                             min-height: 100px;
-                            background-position: center;
+                            background-position: bottom;
                         }
                     }
                 }
