--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -41,6 +41,7 @@
                 // background-image: url('../../public/images/Ellipsis-1.5s-194px\ \(1\).gif');
                 // background-image: url('../../public/images/Ellipsis-1.9s-200px.gif');
                 background-image: url('../../public/images/final.gif');
+                background-repeat: no-repeat;
                 .variation-img {
                     position: absolute;
                     bottom: 0px;
