loader issue fixed

--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -42,6 +42,7 @@
                 // background-image: url('../../public/images/Ellipsis-1.9s-200px.gif');
                 background-image: url('../../public/images/final.gif');
                 background-repeat: no-repeat;
+                background-position: bottom;
                 .variation-img {
                     position: absolute;
                     bottom: 0px;
