--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -459,7 +459,7 @@ input:disabled + .checkmark + .text {
     text-decoration: none;
 }
 .-product-details {
-    margin: 5px;
+    margin: 10px 5px;
 
     .offer-price {
         font-size: 30px;
