--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -6,6 +6,25 @@
             }
         }
     }
+    .variation-container {
+        .variation-options {
+            margin: 10px 0;
+            .swatch-images {
+                display: flex;
+                flex-wrap: wrap;
+                max-height:100px;
+                overflow-x: auto;
+                .prod-img {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+        }
+        .d-none {
+            display: none;
+        }
+    }
+    
 }
 .slick-lightbox {
     .slick-lightbox-inner {
@@ -71,7 +90,7 @@
 .product-modal-dialog,
 .product-modal-content {
     /* 80% of window height */
-    height: 100%;
+    height: 105%;
 }
 .product-modal-dialog {
     margin: 0 auto;
@@ -84,274 +103,6 @@
     border-top-right-radius: 0;
     border-bottom: 0;
     height: 50px;
-}
-
-// .modal-body {
-//     position: relative;
-//     flex: 1 1 auto;
-//     padding: 1rem 0;
-// }
-// .modal-dialog,
-// .modal-content {
-//     /* 80% of window height */
-//     height: 100%;
-// }
-// .modal-dialog {
-//     margin: 0 auto;
-// }
-
-//modal code end
-
-.detailspage-main-div {
-    // font-family: Helvetica, sans-serif;
-    .detailspage {
-        .wishlist-icon {
-            @include media-breakpoint-up(md) {
-                position: absolute;
-                right: 0px;
-                top: 0;
-                font-size: 21px;
-            }
-            &.marked {
-                .-icon {
-                    font-weight: 900;
-                }
-            }
-            &.marked-icon {
-                .-icon {
-                    font-weight: 900;
-                }
-            }
-        }
-        .wishlist-icon-modal {
-            &.marked-icon {
-                .-icon {
-                    font-weight: 900;
-                }
-            }
-        }
-
-        .filters.filters-mobile {
-            width: 100% !important;
-            background: $secondary-color;
-            color: $white;
-            position: absolute;
-            z-index: 100;
-            display: none;
-
-            &.show {
-                display: block;
-            }
-
-            .single-filter {
-                margin: 20px;
-                .select {
-                    .select-styled {
-                        background: white;
-                        border-radius: 10px;
-                        padding-right: 50px;
-                        min-width: 220px;
-
-                        &::after {
-                            border: none;
-                            background: url('../../public/images/filter-arrow.png');
-                            width: 41px;
-                            height: 41px;
-                            top: 0px;
-                            right: -20px;
-                            background-size: cover;
-                            border-radius: 0 10px 10px 0;
-                        }
-                    }
-                }
-
-                .select-label {
-                    margin-right: 10px;
-                    font-size: 16px;
-                    color: $primary-color;
-                }
-
-                ul {
-                    li {
-                        display: inline-block;
-
-                        .container {
-                            .checkmark {
-                                border: 1px solid $white !important;
-
-                                &:after {
-                                    left: 4px;
-                                    top: 1px;
-                                    width: 5px;
-                                    height: 10px;
-                                    border: solid $border-color;
-                                    border-width: 0 3px 3px 0;
-                                    -webkit-transform: rotate(45deg);
-                                    transform: rotate(45deg);
-                                }
-                            }
-                        }
-                    }
-                }
-
-                .irs-line {
-                    border: 1px solid $white;
-                    background-color: $white !important;
-                }
-            }
-        }
-        .zoom-img-variation {
-            cursor: zoom-in;
-        }
-        .carousel-img {
-            cursor: pointer;
-        }
-        .controls-div {
-            height: 33px;
-            .-icon {
-                font-size: 22px;
-                margin: 5px;
-            }
-        }
-
-        .-images-container {
-            height: 480px;
-            overflow-x: auto;
-            margin: 0px 0px 15px 0px;
-            @include media-breakpoint-up(md) {
-                margin: 15px 0px;
-            }
-
-            .-images {
-                overflow-y: scroll;
-                height: 480px;
-                white-space: nowrap;
-                padding: 15px 0;
-                .-prod-img {
-                    max-height: 100%;
-                    display: block;
-                }
-                .lightbox-img-div {
-                    display: inline;
-                }
-            }
-        }
-
-        .responsive {
-            height: auto;
-            max-width: 100%;
-            .slick-slide {
-                margin: 0px;
-                padding: 0px;
-            }
-            .slick-track {
-                margin: 0px;
-            }
-            .mini-carousel-item {
-                .carousel-img {
-                    margin: 0px;
-                }
-            }
-        }
-        .brand-header {
-            padding-bottom: 5px;
-            border-bottom: 2px solid #ccc;
-            margin-bottom: 10px;
-        }
-
-        .prod-price-card {
-            font-size: 24px;
-            font-weight: 600;
-
-            .pdp-buy-btn {
-                width: 100%;
-                @include primary-button;
-            }
-
-            .select-label {
-                display: block;
-                font-weight: 400;
-                text-transform: capitalize;
-                font-size: 16px;
-                margin: 10px 0px;
-            }
-
-            .select {
-                display: block;
-                width: 100%;
-                height: auto;
-                .select-styled {
-                    padding: 5px 15px;
-                    border: 1px solid $primary-color;
-                    border-radius: 4px;
-                }
-                .select-options {
-                    max-height: 250px;
-                    overflow-y: scroll;
-                    li {
-                        text-align: center;
-                        padding-left: 15px;
-                        padding-right: 15px;
-                    }
-                }
-            }
-        }
-
-        .rating-container {
-            margin: auto auto 10px auto;
-            .rating {
-                margin-left: 0px;
-                vertical-align: middle;
-            }
-        }
-    }
-    @media screen and (max-width: 480px) {
-        .slick-lightbox {
-            .slick-lightbox-inner {
-                .slick-lightbox-close::before {
-                    font-size: 50px !important;
-                }
-                .slick-prev::before,
-                .slick-next::before {
-                    color: $white !important;
-                    font-size: 50px !important;
-                }
-                .slick-prev,
-                .slick-next {
-                    z-index: 100;
-                    margin-top: -20px;
-                }
-            }
-        }
-    }
-    // .nav-tabs {
-    //     display:none;
-    // }
-
-    // @media(min-width:768px) {
-    //     .nav-tabs {
-    //         display: flex;
-    //     }
-
-    //     .card {
-    //         border: none;
-    //     }
-
-    //     .card .card-header {
-    //         display:none;
-    //     }
-
-    //     .card .collapse{
-    //         display:block;
-    //     }
-    // }
-
-    // @media(max-width:767px){
-    //     .tab-pane {
-    //         display: block !important;
-    //         opacity: 1;
-    //     }
-    // }
 }
 
 .drift-zoom-pane {
